# p6

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Info.plist  README.md  bake_font.py  build.rs  generate_named_colors.py
include/p6/: p6.h
src/: Angle.h  Canvas.cpp  Canvas.h  Color.h  Context.cpp  Context.h  Event.h  Image.cpp  Image.h  ImageCommon.h  Key.h  KeyEvent.h  MouseButton.h  MouseDrag.h  MouseMove.h  MouseScroll.h  NamedColor.h  RectRenderer.h  RectangleParams.h  RenderTarget.h  Shader.cpp  Shader.h  Transform2D.cpp  Transform2D.h  UniqueGlfwWindow.cpp  UniqueGlfwWindow.h  Window.h  _README.md  lib.rs  main.rs  make_absolute_path.cpp  make_absolute_path.h  math.cpp  math.h  math_constants.h  p6.cpp  p6.h  random.cpp  random.h  render_pipeline_factory.rs  (+2 more)
src/ImGui/: ImGuiWrapper.cpp  ImGuiWrapper.h
src/OpenGL/: UniqueBuffer.cpp  UniqueVAO.cpp
src/details/: CharCorrespondanceTable.h  ImGuiWrapper.cpp  ImGuiWrapper.h  RectRenderer.cpp  RectRenderer.h  TextRenderer.cpp  TextRenderer.h  TriangleRenderer.cpp  TriangleRenderer.h  UniqueGlfwWindow.cpp  UniqueGlfwWindow.h  make_absolute_path.cpp  make_absolute_path.h
src/details/OpenGL/: GLDebug.cpp  GLDebug.h  ShaderDescription.h  ShaderKind.h  ShaderModule.cpp  ShaderModule.h  UniqueBuffer.h  UniqueShader.cpp  UniqueShader.h  UniqueShaderModule.cpp  UniqueShaderModule.h  UniqueVAO.h
src/details/Time/: Clock.cpp  Clock.h  Clock_FixedTimestep.cpp  Clock_FixedTimestep.h  Clock_Realtime.cpp  Clock_Realtime.h
src/internal/: CharCorrespondanceTable.h  ImGuiWrapper.cpp  ImGuiWrapper.h  OpenGLStateRAII.cpp  OpenGLStateRAII.h  OpenGL_Debug.cpp  OpenGL_Debug.h  RectRenderer.cpp  RectRenderer.h  TextRenderer.cpp  TextRenderer.h  TransformStack.cpp  TransformStack.h  TriangleRenderer.cpp  TriangleRenderer.h  UniqueGlfwWindow.cpp  UniqueGlfwWindow.h  append_number_if_file_already_exists.cpp  append_number_if_file_already_exists.h  glfw.h  make_absolute_path.cpp  make_absolute_path.h  make_directories_if_necessary.cpp  make_directories_if_necessary.h  string_utils.cpp  string_utils.h
src/internal/Time/: Clock.cpp  Clock.h  Clock_FixedTimestep.cpp  Clock_FixedTimestep.h  Clock_Realtime.cpp  Clock_Realtime.h
src/shaders/: ellipse.frag  rect.frag  shader.vert
